@@ -1,9 +1,16 @@
 --------------------
 Zmiany w ZPD 0.9.2 (2015-02-02)
 
-- Korekty w funkcjach pobierz_wyniki_egzaminu(), pobierz_wyniki_testu(),
-  pobierz_wyniki_zrownywania() uodparniające je na błąd w bibliotece
-  RPostgreSQL
+- Zmiany w grupie danych "wyniki"
+  - Korekty w funkcjach pobierz_wyniki_egzaminu(), pobierz_wyniki_testu(),
+    pobierz_wyniki_zrownywania() uodparniające je na błąd w bibliotece
+    RPostgreSQL
+  - Korekta funkcji zsumuj_punkty(), która dotychczas nie sumowała danych
+    w postaci długiej
+  - Zmiana na TRUE domyślnych wartości parametrów "skroc" w funkcjach 
+    pobierz_wyniki_egzaminu(), pobierz_wyniki_testu(), pobierz_odpowiedzi(),
+    pobierz_wyniki_zrownywania()
+  - Korekta stosowania skali w funkcji pobierz_odpowiedzi()
 
 --------------------
 Zmiany w ZPD 0.9.1 (2015-01-30)
